<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/labelHistory"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/income_history"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="67dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/logosapv" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:background="@color/Table">


        <!-- id column heading -->
        <TextView
            android:id="@+id/id"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/id_history"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <!-- number column heading -->
        <TextView
            android:id="@+id/date"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/date_history"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <!-- income column heading -->
        <TextView
            android:id="@+id/income"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/income_hstry"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="5dp"/>


    </LinearLayout>

    <!-- Recycler view for populating data in a table format -->

</RelativeLayout>
